--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,8 +1,5 @@
-include: package:flutter_lints/flutter.yaml
-
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+include: package:lints/recommended.yaml
 
 linter:
   rules:
-    avoid_print: false  # Disable for CLI tools
+    avoid_print: false  # Allow print statements in CLI tools
