--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,8 @@ issue_tracker: https://github.com/kyawthet-naing/web-cache-killer/issues
 
 environment:
   sdk: ">=2.12.0 <4.0.0"
-  flutter: ">=3.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
   args: ^2.4.2
   path: ^1.8.3
   http: ^1.4.0
@@ -19,9 +16,8 @@ dependencies:
   io: ^1.0.4
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^6.0.0
+  test: ^1.24.0
+  lints: ^3.0.0
 
 executables:
   web_cache_killer: web_cache_killer
